# agents-mono

./: .gitattributes
connected-contexts/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  run_pipeline.sh
connected-contexts/analysis/: __init__.py  assemble_csvs.py  influences.csv  query.csv  train.csv
connected-contexts/data/: context_types.yaml  statements.json
connected-contexts/prompts/: context_generation.txt  context_review.txt
connected-contexts/queries/: summary.json
connected-contexts/queries/alcohol_liver_damage/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/apple_cider_vinegar_stones/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/bee_pollen_allergies/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/bone_broth_joints/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/breakfast_most_important/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/calcium_bones/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/carrots_night_vision/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/celery_negative_calories/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/charcoal_toxins/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/cherry_juice_insomnia/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/chocolate_acne/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/cinnamon_metabolism/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/coconut_oil_cavities/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/cold_weather_colds/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/collagen_wrinkles/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/copper_bracelets_arthritis/results/: influences.csv  query.csv  train.csv
connected-contexts/queries/cracking_knuckles_arthritis/results/: influences.csv  query.csv  train.csv
connected-contexts/scripts/: __init__.py  assemble_queries.py  generate_contexts.py  review_contexts.py  run_all_queries.py  test_assistant_contexts.py
connected-contexts/visualization/: __init__.py  app.py  data_loader.py  pca_analysis.py  plotting.py
if-query/: README.md  pyproject.toml
if-query/queries/test_query/: query.json  train.json
if-query/src/if_query/: __init__.py  data.py  fit_hessians.py  influence.py  run_query.py
if-query/tests/: __init__.py  conftest.py  test_data.py  test_e2e.py  test_fit_hessians.py  test_influence.py  test_run_query.py
influence-workbench/: .gitignore  config.yaml  pyproject.toml
influence-workbench/backend/: app.py  config.py  contracts.py  db.py  models.py  pairs.py  runner.py  span.py
influence-workbench/backend/clients/: claude.py  infinigram.py
influence-workbench/backend/routes/: probe_sets.py  runs.py  tools.py
influence-workbench/backend/tests/: conftest.py  test_bulk_ops.py  test_contracts.py  test_e2e.py  test_embedding.py  test_infinigram_client.py  test_pairs.py  test_probe_sets.py  test_runs.py  test_span.py  test_tools.py
influence-workbench/frontend/: package-lock.json  package.json  vite.config.ts
influence-workbench/frontend/src/: app.css
malign-influence/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
malign-influence/analysis/: .paper_figures.py.swp  checkpoint_analysis.py  generate_csvs.py  generate_datamodel_csvs.py  lds_analysis.py  prompt_completion_pairs.json  prompt_completion_pairs_negation.json  prompt_completions_negation_rest.json
malign-influence/analysis/figures/: influence_aggregated_analysis.py  lds_by_checkpoint.py  softmargin_entailing_correlation.py  top_k_influence_by_category.py
malign-influence/configs/: birth_date_grader.json  mayors_grader.json
malign-influence/docs/: hyperparameters.md
malign-influence/experiments/: data_modeling.py  generate_eval_datasets.py  influence_on_dm.py  run_all_influence.sh  run_datamodel.sh  run_influence.sh  top_k_dropping.py
malign-influence/k8s/: devbox.template.yaml  kinko-builder.template.yaml  sweep-worker.template.yaml
malign-influence/replication/: INDEX.md  README.md  generate_sampled_datasets.md  run_training.sh  trained_models.md  training_config.json
malign-influence/src/launcher/: __init__.py  crash_debugger.py  jobs.py  kubernetes_orchestrator.py  local_orchestrator.py  orchestrator.py  worker.py
malign-influence/src/oocr_influence/: analysis_utils.py  datamodel.py  eval.py  inspect_config.py  reanalysis_utilities.py  utils.py
malign-influence/src/shared_ml/: __init__.py  activation_dot_product.py  data.py  debug_cuda.py  disk_lru_cache.py  eval.py  influence.py  logging.py  tfidf.py  train.py  utils.py
malign-influence/tests/launcher/: __init__.py  test_functions.py  test_kubernetes_orchestrator.py  test_launch.py  test_launch_integration.py
malign-influence/tests/shared_ml/: __init__.py  test_disk_lru_cache.py
(+327 files in other folders)
