[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "if-query"
version = "0.1.0"
description = "Influence function workflow for language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "kronfluence==1.1.0b5",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
]

[project.scripts]
fit-hessians = "if_query.fit_hessians:main"
run-query = "if_query.run_query:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
kronfluence.git = "https://github.com/levmckinney/kronfluence"
kronfluence.branch = "fsdp2"
